# CearaSC

./: README.md  angular.json  package-lock.json  package.json
back/ceara_api/: .env-example  .pre-commit-config.yaml  .pylintrc  pyproject.toml
back/ceara_api/src/: manage.py
back/ceara_api/src/ceara_api/: settings.py  urls.py  wsgi.py
back/ceara_api/src/core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
back/ceara_api/src/core/migrations/: 0001_initial.py  0002_museu_delete_itemmuseu.py  0003_historico.py  0004_jogador.py  0005_jogador_sobrenome.py  0006_perfil.py
back/ceara_api/src/utils/: jogadores.py  museu.py  quiz.py
front/ceara_front/: README.md  angular.json  package-lock.json  package.json
front/ceara_front/src/: index.html
front/ceara_front/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  auth.guard.ts
front/ceara_front/src/app/pages/bolao/: bolao.component.html  bolao.component.ts
front/ceara_front/src/app/pages/cadastro/: cadastro.component.html  cadastro.component.sass  cadastro.component.ts
front/ceara_front/src/app/pages/home/: home.component.html  home.component.sass  home.component.ts
front/ceara_front/src/app/pages/login/: login.component.html  login.component.sass  login.component.ts
front/ceara_front/src/app/pages/museu/: museu.component.html  museu.component.sass  museu.component.spec.ts  museu.component.ts
front/ceara_front/src/app/services/: perfil.service.ts
src/: index.html
src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
(+13 files in other folders)
